--- a/wishbucket_android/Wishbucket/app/src/main/res/values/strings.xml
+++ b/wishbucket_android/Wishbucket/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Wishbucket</string>
     <string name="action_settings">Settings</string>
+    <string name="facebook_app_id">281281625602147</string>
+
 </resources>
