--- a/wishbucket_android/Wishbucket/app/src/main/res/values/strings.xml
+++ b/wishbucket_android/Wishbucket/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">Wishbucket</string>
     <string name="action_settings">Settings</string>
     <string name="facebook_app_id">281281625602147</string>
+    <string name="title_activity_home">Home</string>
 
 </resources>
