--- a/wishbucket_android/Wishbucket/app/src/main/res/values/strings.xml
+++ b/wishbucket_android/Wishbucket/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="title_activity_home">Home</string>
     <string name="title_wishbucket">Wishbucket</string>
     <string name="message_gift">Gift. Be gifted.</string>
+    <string name="title_activity_recommendation">RecommendationActivity</string>
 
 </resources>
